--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@clerk/nextjs": "^6.21.0",
     "@neondatabase/serverless": "^1.0.1",
+    "cloudinary": "^2.6.1",
     "drizzle-orm": "^0.44.2",
     "next": "15.3.3",
     "react": "^19.0.0",
