feat: integrate rich text editor using Tiptap and enhance course creation form
- Added Tiptap dependencies to package.json for rich text editing capabilities.
- Implemented a new Editor component for handling detailed descriptions in the course form.
- Updated the Form component to include a rich text editor for detailed descriptions with validation.
- Enhanced error handling during course creation to provide user feedback for various scenarios.
- Created a Toggle component for toolbar buttons in the editor for text formatting options.
- Developed a Toolbar component to manage text formatting actions in the editor.
- Updated global styles to include typography plugin for Tailwind CSS.

--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "dependencies": {
     "@clerk/nextjs": "^6.21.0",
     "@neondatabase/serverless": "^1.0.1",
+    "@tiptap/pm": "^2.22.3",
+    "@tiptap/react": "^2.22.3",
+    "@tiptap/starter-kit": "^2.22.3",
     "cloudinary": "^2.6.1",
     "drizzle-orm": "^0.44.2",
     "lucide-react": "^0.522.0",
@@ -23,6 +26,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
